# pyragles

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  projectBuild.sh  pyragles.code-workspace
assets/: level11.json  level11.yaml  modelCube.glb  modelPlane.glb  modelPlane1.glb  modelPlane2.glb  shaderBasic.glsl  shaderLight.glsl  shaderParticles.glsl  shaderSingleColour.glsl  shaderTest.glsl  shaderVertexColours.glsl  shaderVertexColoursLightPerFrag.glsl  shaderVertexColoursNoLight.glsl
cmake/: FindGLESv2.cmake
misc/: build.bat  build.sh  debug.bat  pyra_build.sh  windows_shell.bat
scripts/: build.bat  build.sh  debug.bat  windows_shell.bat
src/: CMakeLists.txt  Makefile  audio.cpp  audio.hpp  camera.cpp  camera.hpp  clean  collision.cpp  collision.hpp  collisionData.hpp  component.cpp  component.hpp  debug  edit  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  exhaust.cpp  exhaust.hpp  floor.cpp  floor.hpp  floor_vertex_data.hpp  game.cpp  game.hpp  gameObject.cpp  gameObject.hpp  gameState.hpp  gameStateMachine.cpp  gameStateMachine.hpp  glBuffer.cpp  glBuffer.hpp  glCallLog.cpp  glCallLog.hpp  glObject.cpp  glObject.hpp  glWindow.cpp  glWindow.hpp  gl_debug.hpp  global.hpp  (+75 more)
src/assets/: arch.glb  baseJsonLevel11.json  basic.glsl  createLevelJson.pl  cube.glb  enemyPod.glb  level11.json  modelArch.glb  modelEnemyPod.glb  modelRedbox.glb  numbox.glb  objColours.txt  parseObjFile.pl  projectile.glb  shVertexColours.glsl  shaderDebug.glsl  shaderHud.glsl  shaderParticles.glsl  shaderVertexColours.glsl  ship.glb  triangle.vs  woodBox.glb
src/components/: physicsComponent.cpp  physicsComponent.hpp
src/rendering/: geometry.hpp  renderable.hpp  renderer.cpp  renderer.hpp
src/shaders/: triangle.fs  triangle.vs
