src = [ 'inputHandler.cpp', 'camera.cpp', 'glCallLog.cpp', 'stb_image.cpp', 'texture.cpp', 'indexBuffer.cpp', 'vertexBuffer.cpp', 'shader.cpp', 'gameObject.cpp', 'gameStateMachine.cpp', 'playState.cpp', 'model.cpp', 'ship.cpp', 'floor.cpp', 'particles.cpp', 'game.cpp', 'main.cpp' ]

executable( 'exe', src, dependencies : [ sdl2_dep, sdl2_mixer_dep, gles_dep ] ) 
