src = [ 'inputHandler.cpp', 'camera.cpp', 'hud.cpp', 'glCallLog.cpp', 'stb_image.cpp', 'texture.cpp', 'indexBuffer.cpp', 'vertexBuffer.cpp', 'shaderCache.cpp', 'shader.cpp', 'gameObject.cpp', 'gameStateMachine.cpp', 'playState.cpp', 'model.cpp', 'ship.cpp', 'floor.cpp', 'exhaust.cpp', 'game.cpp', 'main.cpp' ]

executable( 'exe', src, dependencies : [ sdl2_dep, sdl2_mixer_dep, gles_dep ] ) 
