src = [ 'inputHandler.cpp', 'camera.cpp', 'hud.cpp', 'glCallLog.cpp', 'stb_image.cpp', 'collision.cpp', 'texture.cpp', 'indexBuffer.cpp', 'vertexBuffer.cpp', 'shaderCache.cpp', 'shader.cpp', 'gameObject.cpp', 'gameStateMachine.cpp', 'playState.cpp', 'model.cpp', 'ship.cpp', 'target.cpp', 'floor.cpp', 'exhaust.cpp', 'projectileManager.cpp', 'projectile.cpp', 'enemy.cpp', 'game.cpp', 'main.cpp' ]

executable( 'pyragles', src, dependencies : [ sdl2_dep, sdl2_mixer_dep, gles_dep ] ) 
